[tool.poetry]
name = "fistqslab"
version = "0.1.0"
description = ""
authors = ["jiangzhuochi <1053067021@qq.com>"]
readme = "README.md"
packages = [{ include = "fistqslab", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.poetry.scripts]
lab = "fistqslab.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
