[tool.poetry]
name = "fistqslab"
version = "0.1.0"
description = ""
authors = ["jiangzhuochi <1053067021@qq.com>"]
readme = "README.md"
packages = [{ include = "fistqslab", from = "src" }]

[tool.poetry.dependencies]
python = "==3.10.*"
Flask = "^2.2.2"
numpy = "^1.23.2"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
scipy = "^1.9.1"
pydantic = "^1.10.1"
numexpr = "^2.8.3"
nptyping = "^2.3.1"
more-itertools = "^8.14.0"
notebook = "^6.4.12"


[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.poetry.scripts]
lab = "fistqslab.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
